--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="images">
                 <dd>
                <!-- <img src="<?C:\Users\hp\Desktop\MY PORTFOLIO\shape.png?>"class="images">-->
-                <img src="item1.jpg" alt="my image">
+                <img src="Item1.jpg" alt="my image">
                 </dd>
             </div>
             <div class="goals ">
