--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="image-content">
                         <span class="overlay"></span>
                         <div class="card-image">
-                            <img src="mahi.jpeg" class="card-image">
+                            <img src="Mahi.jpeg" class="card-image">
                         </div>
                     </div>
                     <div class="card-content">
@@ -87,7 +87,7 @@
                         <div class="image-content">
                             <span class="overlay"></span>
                             <div class="card-image">
-                                <img src="mahi.jpeg" class="card-image">
+                                <img src="Mahi.jpeg" class="card-image">
                             </div>
                         </div>
                         <div class="card-content">
@@ -109,7 +109,7 @@
                             <div class="image-content">
                                 <span class="overlay"></span>
                                 <div class="card-image">
-                                    <img src="mahi.jpeg" class="card-image">
+                                    <img src="Mahi.jpeg" class="card-image">
                                 </div>
                             </div>
                             <div class="card-content">
